test/tests/operators/set/let_target.txt
error: cannot assign to `$foo` constant value
 --> tests/operators/set/let_target.tql:7:5
  |
7 | set $foo = "test"
  |     ^^^^ 
  |
